<resources>
    <string name="app_name">ClubFCO</string>
    <string name="listado_de_morosos">Listado de Morosos:</string>
    <string name="cancelar">Cancelar</string>
    <string name="logo_menu_principal">logo menu Principal</string>
    <string name="logo_club_mediano">logo Club mediano</string>
    <string name="pagos">Pagos</string>
    <string name="listar_morosos">Listar Morosos</string>
    <string name="imagen_pie_de_pantalla">Imagen Pie de Pantalla</string>
    <string name="clientes">Clientes</string>
    <string name="piedepagina_imagenclub">PiedePagina_ImagenClub</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="imagenclub">ImagenClub</string>
    <string name="salir">Salir</string>
    <string name="imprimir">Imprimir</string>
    <string name="socios">Socios</string>
    <string name="no_socios">No Socios</string>
    <string name="aranceles">Aranceles</string>
    <string name="agregar_actividad">Agregar Actividad</string>
    <string name="pago_actividades">Pago Actividades</string>
    <string name="imprimir_ticket">Imprimir Ticket</string>
    <string name="pago_recibido">Pago Recibido $:</string>
    <string name="dni">DNI:</string>
    <string name="apellido">Apellido:</string>
    <string name="nombre">Nombre:</string>
    <string name="socio_n">Socio N°:</string>
    <string name="recibo_n">RECIBO N° ...........</string>
    <string name="actividades">Actividades:</string>
    <string name="registro_actividades">Registro Actividades</string>
    <string name="pr_ximo_vencimiento">Próximo vencimiento:</string>
    <string name="fecha_de_pago">Fecha de Pago:</string>
    <string name="registro_de_actividades_no_socios">Registro de Actividades No Socios</string>
    <string name="lista_vencen_hoy">Lista Vencen Hoy</string>
    <string name="lista_socios">Lista Socios</string>
    <string name="baja_socio">Baja Socio</string>
    <string name="alta_socio">Alta Socio</string>
    <string name="cargar_socios_de_prueba">Cargar socios de prueba</string>
    <string name="pago_cuota">Pago Cuota</string>
    <string name="socios_con_cuota_que_vence_hoy">Socios con cuota que vence hoy</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento:</string>
    <string name="barra_carnet">barra carnet</string>
    <string name="etiqueta_verde_carnet">etiqueta verde Carnet</string>
    <string name="foto_carne">foto Carne</string>
    <string name="listado_de_socios">Listado de Socios</string>
    <string name="volver">Volver</string>
    <string name="bienvenido_usuario">Bienvenido usuario:</string>
</resources>