<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#046C43"
    tools:context=".MenuPrincipalActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="175dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="83dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:contentDescription="@string/logo_club_mediano"
            android:src="@drawable/logomediano" />


    </FrameLayout>
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60sp"
        android:contentDescription="@string/logo_menu_principal"
        android:src="@drawable/menuprincipal" />

    <Button
        android:id="@+id/btnClientes"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:text="@string/clientes"
        android:layout_marginBottom="5sp"
        android:backgroundTint="@color/white"
        android:textColor="#046C43"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnPagos"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:text="@string/pagos"
        android:layout_marginBottom="5sp"
        android:backgroundTint="@color/white"
        android:textColor="#046C43"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnListarMorosos"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:text="@string/listar_morosos"
        android:layout_marginBottom="5sp"
        android:backgroundTint="@color/white"
        android:textColor="#046C43"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:text="@string/cancelar"
        android:layout_marginBottom="65sp"
        android:backgroundTint="@color/white"
        android:textColor="#046C43"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:srcCompat="@drawable/imgslogan"
        android:contentDescription="@string/imagen_pie_de_pantalla" />


</LinearLayout>