<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recibo"
    tools:context=".ReciboCuotaActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/etiquetaverderecibo"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:orientation="vertical"
        android:background="#046C43">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:background="#046C43"
            android:src="@drawable/barracarnet"
            android:layout_marginBottom="30dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="380dp"
            android:layout_height="240dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="4dp"
            android:backgroundTint="#D9D9D9">

            <TextView
                android:id="@+id/txtNroRecibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recibo_n"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtNroSocio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/socio_n"
                android:textStyle="bold"
                android:layout_marginStart="50dp"
                android:layout_marginTop="60dp"/>

            <TextView
                android:id="@+id/txtNombreSocio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textStyle="bold"
                android:layout_marginStart="50dp"
                android:layout_marginTop="80dp"/>

            <TextView
                android:id="@+id/txtApellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellido"
                android:textStyle="bold"
                android:layout_marginStart="50dp"
                android:layout_marginTop="100dp"/>

            <TextView
                android:id="@+id/txtNroDNI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dni"
                android:textStyle="bold"
                android:layout_marginStart="50dp"
                android:layout_marginTop="120dp"/>

            <TextView
                android:id="@+id/txtPagoRecibido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pago_recibido"
                android:layout_marginStart="50dp"
                android:layout_marginTop="150dp"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtFechaPago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_de_pago"
                android:textStyle="bold"
                android:layout_marginStart="50dp"
                android:layout_marginTop="170dp"/>

            <TextView
                android:id="@+id/txtFechaVencimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pr_ximo_vencimiento"
                android:textStyle="bold"
                android:layout_marginStart="50dp"
                android:layout_marginTop="190dp"/>
        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <Button
        android:id="@+id/btnImprimirTicket"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/imprimir_ticket"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:backgroundTint="#046C43"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:backgroundTint="#046C43"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/salir"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:backgroundTint="#046C43"
        android:textColor="@color/white"/>
</LinearLayout>
