<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#046C43"
    android:orientation="vertical"
    tools:context=".PagosActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView

            android:layout_width="80dp"
            android:layout_height="83dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:contentDescription="@string/logo_club_mediano"
            android:src="@drawable/logomediano" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aranceles"
            android:layout_marginTop="60dp"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textColor="#FFFFFF"
            android:gravity="center" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fútbol $15000 - Basquet $10000 - Voley y Handball $12000 "
            android:layout_marginTop="90dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:gravity="center" />

    </FrameLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvActividades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"/>


    <Button
        android:id="@+id/btnActividades"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:text="@string/agregar_actividad"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/white"
        android:textColor="#046C43"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnPagoActividades"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:text="@string/pago_actividades"
        android:layout_marginBottom="5sp"
        android:backgroundTint="@color/white"
        android:textColor="#046C43"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnRegistroActividades"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:text="@string/registro_actividades"
        android:layout_marginBottom="5sp"
        android:backgroundTint="@color/white"
        android:textColor="#046C43"
        android:layout_gravity="center"/>


    <Button
        android:id="@+id/btnSalir"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginBottom="65sp"
        android:backgroundTint="@color/white"
        android:text="@string/cancelar"
        android:textColor="#046C43" />

    <ImageView
        android:paddingTop="0dp"
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:srcCompat="@drawable/imgslogan"
        android:contentDescription="@string/imagen_pie_de_pantalla" />

</LinearLayout>

